--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "networks.json"
   ],
   "scripts": {
-    "lint": "eslint --max-warnings 0 .",
+    "lint": "eslint --max-warnings 0 ./**",
+    "lintinit": "eslint --init",
     "safe": "hardhat",
     "prepare": "husky install"
   },
@@ -43,7 +44,6 @@
   },
   "dependencies": {
     "@gnosis.pm/safe-contracts": "1.3.0",
-    "@gnosis.pm/safe-deployments": "1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@types/mocha": "^8.2.0",
     "@types/yargs": "^15.0.10",
