--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 MNEMONIC=""
 INFURA_KEY=""
 # Used for custom network
-NODE_URL=""
-NETWORK=""
+NETWORK="custom"
+NODE_URL="https://http-mainnet.hoosmartchain.com"
+PK="<private key>"
